# spotiList

./: .gitignore  NOTES.md  README.md  compose.yml  ilerleme_raporu.docx
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 0001_users.sql  0002_track_embeddings.sql  0003_track_bpm.sql  0004_auto_playlists.sql  0005_library_sync.sql  0006_user_image.sql  0007_youtube_emotion.sql
backend/src/: auth.rs  auto.rs  bpm.rs  db.rs  embeddings.rs  error.rs  flaresolverr.rs  lastfm.rs  lib.rs  library.rs  lyrics.rs  main.rs  me.rs  model.rs  playlists.rs  routes.rs  spotify.rs  sync.rs  user.rs  youtube.rs
embedder/: .dockerignore  Dockerfile  requirements.txt
embedder/app/: main.py
web/: .dockerignore  Dockerfile  next.config.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/api/[...path]/: route.ts
web/src/app/dashboard/: dummy.ts  page.tsx  types.ts
web/src/app/dashboard/components/: AutoCard.tsx  Field.tsx  LeftColumn.tsx  LibrarySection.tsx  PlaylistPanel.tsx  ProfileMenu.tsx  SmartPlaylists.tsx  SyncCard.tsx  TrackList.tsx  TrackPanel.tsx
yt-scraper/: Dockerfile  requirements.txt
yt-scraper/app/: main.py
